System_Hardening/pod-resources.yaml
apiVersion: v1
kind: Pod
metadata:
  name: app-pod
  namespace: team-b
spec:
  containers:
    - name: app-container
      image: nginx
      ports:
        - containerPort: 80
      resources:
        requests:
          cpu: 1
          memory: 1Gi
        limits:
          cpu: 2
          memory: 2Gi
