System_Hardening/pod-runtimeclass.yaml
apiVersion: v1
kind: Pod
metadata:
  name: simple-webapp-1
  labels:
    name: simple-webapp
spec:
  runtimeClassName: secure-runtime
  containers:
    - name: simple-webapp
      image: kodekloud/webapp-delayed-start
      ports:
        - containerPort: 8080
